# authcare

./: .gitignore  Cargo.toml  rustfmt.toml
actix-web-authcare/: Cargo.toml
actix-web-authcare/src/: main.rs
actix-web-authcare/src/api/: controller.rs  dto.rs  middleware.rs  mod.rs
http-requests/: auth.http
lib/: Cargo.toml
lib/migrations/: 20230625182358_create_session_table.sql  20230625182407_create_refresh_token_table.sql  20230714213009_create_identity_table.sql
lib/src/: config.rs  constants.rs  lib.rs  main.rs
lib/src/api/: controller.rs
lib/src/model/: access_token.rs  identity.rs  identity_repository.rs  jwt.rs  mod.rs  session.rs  session_repository.rs  token_info.rs  user.rs  user_repository.rs
lib/src/oidc/: mod.rs  oidc.rs
lib/src/oidc/provider/: apple.rs  google.rs  mod.rs
lib/src/service/: auth_service.rs  mod.rs  session_service.rs  token_service.rs  user_serivce.rs
lib/src/utils/: crypto.rs
migrations/: 20230625182335_create_user_table.sql  20230714213009_create_identity_table.sql
src/: config.rs  main.rs
src/api/: controller.rs  dto.rs  middleware.rs
src/http-requests/: auth.http
src/model/: access_token.rs  identity.rs  identity_repository.rs  jwt.rs  mod.rs  refresh_token.rs  refresh_token_repository.rs  session_repository.rs  user.rs
src/oidc/: mod.rs  oidc.rs
src/service/: auth_service.rs  mod.rs  token_service.rs  user_serivce.rs
