[package]
name = "actix-web-authcare"
version = "0.1.0"
edition = "2021"

[dependencies]

# Async
tokio = { version = "1.28.2", features = ["full"] }

# Server
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
jsonwebtoken = "8.3.0"

# Serialization
serde = "1.0.164"
serde_json = "1.0.97"
uuid = { version = "1.3.4", features = ["serde", "v4"] }

# Database
sqlx = { version = "0.7.0-alpha.3", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# Utils
dotenv = "0.15.0"
env_logger = "0.10.0"
chrono = { version = "0.4.26", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.68"
thiserror = "1.0.40"

# Crypto
argon2 = "0.5.0"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }