[package]
name = "authcare"
version = "0.2.3"
edition = "2021"

[dependencies]

# Async
tokio = { version = "1.36.0", features = ["full"] }

# Auth
jsonwebtoken = "9.2.0"
openidconnect = { version = "3.4.0", features = ["accept-string-booleans"] }
reqwest = "0.11.24"

# Serialization
serde = "1.0.196"
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

# Database
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# Utils
dotenv = "0.15.0"
env_logger = "0.11.1"
chrono = { version = "0.4.33", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.77"
thiserror = "1.0.56"
lazy_static = "1.4.0"

# Crypto
argon2 = "0.5.3"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }